--- a/views/index.html
+++ b/views/index.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; CRENAZ 2016</p>
+                    <p>Copyright &copy; CRENAZ! 2016</p>
                 </div>
             </div>
             <!-- /.row -->
