--- a/views/index.html
+++ b/views/index.html
@@ -69,9 +69,61 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="section-heading">#</h1>
-                    <p class="lead section-lead">#</p>
-                    <p class="section-paragraph">#</p>
+                    <h1 class="section-heading">Old Dish List:</h1>
+                    <p class="lead section-lead">Appetizers:</p>
+                    <p class="section-paragraph">Burrata {"pom redux", "burrata ball", "acorn squash", "frisee", "Pom seeds", "kale pesto", "black pepper"}</p>
+                    <p class="section-paragraph">Roasted Carrots {"pistachio butter", "roasted carrots", "", ""}
+
+    Rabbit Terrine {"", "", ""}
+
+  Salads:
+
+    Beet Salad
+    Kale Salad
+
+Sandwiches
+
+New Dish list:
+
+  Salads:
+
+    Spring Greens {"herbed goat cheese", "baby fennel", "shaved yellow beets", "shaved red beets", "beet vinaigrette", "fennel brittle"}
+
+    Burrata {"Pom Redux", "burrata ball", "acorn squash", "frisee", "Pom seeds", "kale pesto", "black pepper"}
+
+    Shaved Vegetable Salad {"", "", ""}
+
+  Small Plates:
+
+    Crudo 
+
+    Soup of the Day 
+
+    Lamb Meatballs 
+
+    Spring Vegetable Tart 
+
+    Meat Board 
+
+    Cheese Board
+
+  Large Plates:
+
+    Meatloaf Sandwich
+
+    Roasted Half Chicken
+
+    Braised Short Ribs {"", "", ""}
+
+    Pork Belly {"", "", ""}
+
+    Albacore Tuna {"", "", ""}
+
+
+
+
+
+
                 </div>
             </div>
         </div>
