--- a/views/index.html
+++ b/views/index.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>List of Foods</title>
-
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link href="css/full-width-pics.css" rel="stylesheet">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
-
 <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-fixed-top" role="navigation">
         <div class="container">
@@ -56,85 +47,53 @@
         </div>
         <!-- /.container -->
     </nav>
-
     <!-- Full Width Image Header with Logo -->
     <!-- Image backgrounds are set within the full-width-pics.css file. -->
     <header class="image-bg-fluid-height">
         <!--<img class="img-responsive img-center" src="../assets/img/eugenelogo.png" alt="eugene and co logo">-->
         <h2>Food List</h2>
     </header>
-
     <!-- Content Section -->
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div id="mainlist" class="col-lg-12">
                     <h1 class="section-heading">Old Dish List:</h1>
                     <p class="lead section-lead">Appetizers:</p>
                     <p class="section-paragraph">Burrata {"pom redux", "burrata ball", "acorn squash", "frisee", "Pom seeds", "kale pesto", "black pepper"}</p>
-                    <p class="section-paragraph">Roasted Carrots {"pistachio butter", "roasted carrots", "", ""}
-
-    Rabbit Terrine {"", "", ""}
-
-  Salads:
-
-    Beet Salad
-    Kale Salad
-
-Sandwiches
-
-New Dish list:
-
-  Salads:
-
-    Spring Greens {"herbed goat cheese", "baby fennel", "shaved yellow beets", "shaved red beets", "beet vinaigrette", "fennel brittle"}
-
-    Burrata {"Pom Redux", "burrata ball", "acorn squash", "frisee", "Pom seeds", "kale pesto", "black pepper"}
-
-    Shaved Vegetable Salad {"", "", ""}
-
-  Small Plates:
-
-    Crudo 
-
-    Soup of the Day 
-
-    Lamb Meatballs 
-
-    Spring Vegetable Tart 
-
-    Meat Board 
-
-    Cheese Board
-
-  Large Plates:
-
-    Meatloaf Sandwich
-
-    Roasted Half Chicken
-
-    Braised Short Ribs {"", "", ""}
-
-    Pork Belly {"", "", ""}
-
-    Albacore Tuna {"", "", ""}
-
-
-
-
-
-
+                    <p class="section-paragraph">Roasted Carrots {"pistachio butter", "roasted carrots", "", ""}</p>
+                    <p class="section-paragraph">Rabbit Terrine {"", "", ""}</p>
+                    <p class="lead section-lead">Salads:</p>
+                    <p class="section-paragraph">Beet Salad</p>
+                    <p class="section-paragraph">Kale Salad</p>
+                    <p class="lead section-lead">Sandwiches</p>
+                    <p class="section-paragraph">Chicken</p>
+                    <p class="section-paragraph">Meatloaf</p>
+                    <h1 class="section-heading">New Dish List:</h1>
+                    <p class="lead section-lead">Salads:</p>
+                    <p class="section-paragraph">Spring Greens {"herbed goat cheese", "baby fennel", "shaved yellow beets", "shaved red beets", "beet vinaigrette", "fennel brittle"}</p>
+                    <p class="section-paragraph">Burrata {"Pom Redux", "burrata ball", "acorn squash", "frisee", "Pom seeds", "kale pesto", "black pepper"}</p>
+                    <p class="section-paragraph">Shaved Vegetable Salad {"", "", ""}</p>
+                    <p class="lead section-lead">Small Plates:</p>
+                    <p class="section-paragraph">Crudo</p>
+                    <p class="section-paragraph">Soup of the Day</p>
+                    <p class="section-paragraph">Lamb Meatballs</p>
+                    <p class="section-paragraph">Spring Vegetable Tart</p>
+                    <p class="section-paragraph">Meat Board</p>
+                    <p class="section-paragraph">Cheese Board</p>
+                    <p class="lead section-lead">Large Plates:</p>
+                    <p class="section-paragraph">Meatloaf Sandwich</p>
+                    <p class="section-paragraph">Roasted Half Chicken</p>
+                    <p class="section-paragraph">Braised Short Ribs {"", "", ""}</p>
+                    <p class="section-paragraph">Pork Belly {"", "", ""}</p>
+                    <p class="section-paragraph">Albacore Tuna {"", "", ""}</p>
                 </div>
             </div>
         </div>
     </section>
-
-
     <!-- Fixed Height Image Aside -->
     <!-- Image backgrounds are set within the full-width-pics.css file. -->
     <aside class="image-bg-fixed-height"></aside>
-
-
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -147,13 +106,9 @@ New Dish list:
         </div>
         <!-- /.container -->
     </footer>
-
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
 </body>
-
 </html>
