--- a/views/index.html
+++ b/views/index.html
@@ -64,26 +64,26 @@
                     <p class="section-paragraph">Roasted Carrots {"pistachio butter", "roasted carrots", "", ""}</p>
                     <p class="section-paragraph">Rabbit Terrine {"", "", ""}</p>
                     <p class="lead section-lead">Salads:</p>
-                    <p class="section-paragraph">Beet Salad</p>
-                    <p class="section-paragraph">Kale Salad</p>
-                    <p class="lead section-lead">Sandwiches</p>
-                    <p class="section-paragraph">Chicken</p>
-                    <p class="section-paragraph">Meatloaf</p>
+                    <p class="section-paragraph">Beet Salad {"", "", ""}</p>
+                    <p class="section-paragraph">Kale Salad {"", "", ""}</p>
+                    <p class="lead section-lead">Sandwiches:</p>
+                    <p class="section-paragraph">Chicken {"", "", ""}</p>
+                    <p class="section-paragraph">Meatloaf {"", "", ""}</p>
                     <h1 class="section-heading">New Dish List:</h1>
                     <p class="lead section-lead">Salads:</p>
                     <p class="section-paragraph">Spring Greens {"herbed goat cheese", "baby fennel", "shaved yellow beets", "shaved red beets", "beet vinaigrette", "fennel brittle"}</p>
                     <p class="section-paragraph">Burrata {"Pom Redux", "burrata ball", "acorn squash", "frisee", "Pom seeds", "kale pesto", "black pepper"}</p>
                     <p class="section-paragraph">Shaved Vegetable Salad {"", "", ""}</p>
                     <p class="lead section-lead">Small Plates:</p>
-                    <p class="section-paragraph">Crudo</p>
-                    <p class="section-paragraph">Soup of the Day</p>
-                    <p class="section-paragraph">Lamb Meatballs</p>
-                    <p class="section-paragraph">Spring Vegetable Tart</p>
-                    <p class="section-paragraph">Meat Board</p>
-                    <p class="section-paragraph">Cheese Board</p>
+                    <p class="section-paragraph">Crudo {"", "", ""}</p>
+                    <p class="section-paragraph">Soup of the Day {"", "", ""}</p>
+                    <p class="section-paragraph">Lamb Meatballs {"", "", ""}</p>
+                    <p class="section-paragraph">Spring Vegetable Tart {"", "", ""}</p>
+                    <p class="section-paragraph">Meat Board {"", "", ""}</p>
+                    <p class="section-paragraph">Cheese Board {"", "", ""}</p>
                     <p class="lead section-lead">Large Plates:</p>
-                    <p class="section-paragraph">Meatloaf Sandwich</p>
-                    <p class="section-paragraph">Roasted Half Chicken</p>
+                    <p class="section-paragraph">Meatloaf Sandwich {"", "", ""}</p>
+                    <p class="section-paragraph">Roasted Half Chicken {"", "", ""}</p>
                     <p class="section-paragraph">Braised Short Ribs {"", "", ""}</p>
                     <p class="section-paragraph">Pork Belly {"", "", ""}</p>
                     <p class="section-paragraph">Albacore Tuna {"", "", ""}</p>
