--- a/assets/css/full-width-pics.css
+++ b/assets/css/full-width-pics.css
@@ -7,7 +7,15 @@
 body {
     margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
-
+.navbar {
+    background-color: rgba(91, 158, 245, 0.6);
+    border-bottom-color: rgba(0, 0, 0, 0.7);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+}
+#titulo {
+    text-shadow: 
+}
 .image-bg-fluid-height,
 .image-bg-fixed-height {
     text-align: center;
@@ -18,12 +26,12 @@ body {
 }
 
 .image-bg-fluid-height {
-	background: url('http://lorempixel.com/g/1920/500/') no-repeat center center scroll;
+	background: url('http://lorempixel.com/1920/500/') no-repeat center center scroll;
     padding: 30px 0;
 }
 
 .image-bg-fixed-height {
-	background: url('http://lorempixel.com/g/1920/500/') no-repeat center center scroll;
+	background: url('http://lorempixel.com/1920/500/') no-repeat center center scroll;
     height: 10em;
 }
 
