--- a/views/index.html
+++ b/views/index.html
@@ -51,7 +51,7 @@
     <!-- Image backgrounds are set within the full-width-pics.css file. -->
     <header class="image-bg-fluid-height">
         <!--<img class="img-responsive img-center" src="../assets/img/eugenelogo.png" alt="eugene and co logo">-->
-        <h2>Food List</h2>
+        <h2 id="titulo">Food List</h2>
     </header>
     <!-- Content Section -->
     <section>
