--- a/views/index.html
+++ b/views/index.html
@@ -72,7 +72,7 @@
                     <h1 class="section-heading">New Dish List:</h1>
                     <p class="lead section-lead">Salads:</p>
                     <p class="section-paragraph">Spring Greens {"herbed goat cheese", "baby fennel", "shaved yellow beets", "shaved red beets", "beet vinaigrette", "fennel brittle"}</p>
-                    <p class="section-paragraph">Burrata {"Pom Redux", "burrata ball", "acorn squash", "frisee", "Pom seeds", "kale pesto", "black pepper"}</p>
+                    <p class="section-paragraph">Burrata {"nettle pureé", "burrata ball", "balsamic vinaigrette", "black pepper"}</p>
                     <p class="section-paragraph">Shaved Vegetable Salad {"", "", ""}</p>
                     <p class="lead section-lead">Small Plates:</p>
                     <p class="section-paragraph">Crudo {"", "", ""}</p>
