--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
     <!-- Full Width Image Header with Logo -->
     <!-- Image backgrounds are set within the full-width-pics.css file. -->
     <header class="image-bg-fluid-height">
-        <!--<img class="img-responsive img-center" src="../assets/img/eugenelogo.png" alt="eugene and co logo">-->
+        <img class="img-responsive img-center" src="../assets/img/###.png" alt="logo">
         <h2 id="titulo">Food List</h2>
     </header>
     <!-- Content Section -->
