Now with Angular!

--- a/views/test.html
+++ b/views/test.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html ng-app>
 <head>
-    <title>test</title>
-    <script src="./js/script.js"></script>
+    <title>prueba</title>
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
   <div class="container">
-    <h1>Name:</h>
+    <h1>Nombre:</h1>
     <br /><br />
-    <p><input type="text" ng-model="name" placeholder="Enter name here"/>{{name}}</p>
+    <p><input type="text" ng-model="eLnombre" placeholder="Ponga su nombre:"/>{{eLnombre}}</p>
   </div>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="./js/angular.min.js"></script>
 </body>
 </html>
