--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>List of Foods</title>
+    <title>Garde Manger</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -58,18 +58,18 @@
         <div class="container">
             <div class="row">
                 <div id="mainlist" class="col-lg-12">
-                    <h1 class="section-heading">Old Dish List:</h1>
-                    <p class="lead section-lead">Appetizers:</p>
-                    <p class="section-paragraph">Burrata {"pom redux", "burrata ball", "acorn squash", "frisee", "Pom seeds", "kale pesto", "black pepper"}</p>
-                    <p class="section-paragraph">Roasted Carrots {"pistachio butter", "roasted carrots", "", ""}</p>
-                    <p class="section-paragraph">Rabbit Terrine {"", "", ""}</p>
-                    <p class="lead section-lead">Salads:</p>
-                    <p class="section-paragraph">Beet Salad {"", "", ""}</p>
-                    <p class="section-paragraph">Kale Salad {"", "", ""}</p>
-                    <p class="lead section-lead">Sandwiches:</p>
-                    <p class="section-paragraph">Chicken {"", "", ""}</p>
-                    <p class="section-paragraph">Meatloaf {"", "", ""}</p>
-                    <h1 class="section-heading">New Dish List:</h1>
+                   
+                   
+                   
+                   
+                   
+                   
+                   
+                   
+                   
+                   
+                   
+                    <h1 class="section-heading">Dish List:</h1>
                     <p class="lead section-lead">Salads:</p>
                     <p class="section-paragraph">Spring Greens {"herbed goat cheese", "baby fennel", "shaved yellow beets", "shaved red beets", "beet vinaigrette", "fennel brittle"}</p>
                     <p class="section-paragraph">Burrata {"nettle pureé", "burrata ball", "balsamic vinaigrette", "black pepper"}</p>
